@@ -1,5 +1,0 @@
-# RANCiD device type configuration.
-#
-# DO NOT override the base types.  Copy them from rancid.types.base and rename
-# them.  If you override existing types, it will be harder to provide support
-# to you and I will hate you.
